--- a/forexsys/templates/base.html
+++ b/forexsys/templates/base.html
@@ -5,6 +5,8 @@
         <title>{% block page_title %} {% endblock %}</title>
         <link rel="stylesheet" href="{{ STATIC_URL }}base.css" />
         <link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
+        <script type="text/javascript" src="{{ STATIC_URL}}jquery-1.8.2.min.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL}}jquery.lightbox_me.jsmin.js"></script>
     </head>
 
     <body>
@@ -38,5 +40,6 @@
                 </div>
             </div>
         </div>
+        <div id="popup"></div>
     </body>
 </html>
