--- a/forexsys/forexsys/static/base.css
+++ b/forexsys/forexsys/static/base.css
@@ -59,7 +59,7 @@ div#menu {
 div#popup { display: none; }
 
 div#content {
-   width: 90%;
+   width: 960px;
    margin: .5em auto;
 }
 
@@ -123,7 +123,7 @@ div.stepview .selector h3 {
 div.stepview img {
    position: relative;
    margin: 0 auto;
-   height: 100%;
+   height: 480px;
 }
 
 div.stepview ul li {
