--- a/forexsys/templates/base.html
+++ b/forexsys/templates/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
         <script type="text/javascript" src="{{ STATIC_URL}}jquery-1.8.2.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL}}jquery.lightbox_me.jsmin.js"></script>
+        {% block head %} {% endblock %}
     </head>
 
     <body>
