--- a/forexsys/templates/tradesys/base.html
+++ b/forexsys/templates/tradesys/base.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block head %}
+{% block tradesys_head %} {% endblock %}
+{% endblock %}
 {% block menu %}
     <a href="/tradesys/MyTradePlan">我的计划</a> |
     <a href="/tradesys/MyTradePlan/market_over_view/">市场整体分析</a> |
