--- a/forexsys/templates/tradesys/FirstSelectView.html
+++ b/forexsys/templates/tradesys/FirstSelectView.html
@@ -1,7 +1,92 @@
 {% extends "base.html" %}
+{% load tradesys_extras %}
 {% block content %}
 <li>{{ tradeframe }} </li>
 <li>{{ tradetype }} </li>
+
+
+<table class="diffview">
+  <tr><td colspan=7><h2>長期</h2></td></tr>
+  <tr>
+    <th>图表 </th>
+    {% for item in b_diffview_set reversed %}
+    <td class="thumb">
+      <a href="{{image_base_url}}full/{{item.symbol_name}}_{{item.timeframe}}.gif" alt="diff_view">
+	<img src="{{image_base_url}}thumb/{{item.symbol_name}}_{{item.timeframe}}.gif" alt = "diff_view"/>
+      </a>
+    </td>
+    {% endfor %}
+  </tr>
+
+  <tr>
+    <th>客观</th>
+    {% for item in b_diffview_set reversed %}
+    <td> {{ obj_dir|hash:item.obj_dir }}</td>
+    {% endfor %}
+  </tr>
+
+  <tr>
+    <th>主观</th>
+    {% for item in b_diffview_set reversed %}
+    <td>{{ sub_dir|hash:item.sub_dir }} </td>
+    {% endfor %}
+  </tr>
+
+  <tr><th>結論</th><td colspan=6>{{ mov_b_res }}</td></tr>
+
+  <tr><td colspan=7><h2>短期</h2></td></tr>
+  
+  <tr>
+    <th>圖表</th>
+    {% for item in s_diffview_set %}
+    <td class="thumb">
+      <a href="{{image_base_url}}full/{{item.symbol_name}}_{{item.timeframe}}.gif" alt="diff_view">
+        <img src="{{image_base_url}}thumb/{{item.symbol_name}}_{{item.timeframe}}.gif" alt = "diff_view"/>
+      </a>
+    </td>
+    {% endfor %}
+  </tr>
+
+  <tr>
+    <th>客观</th>
+    {% for item in s_diffview_set reversed %}
+    <td> {{ obj_dir|hash:item.obj_dir }} </td>
+    {% endfor %}
+  </tr>
+
+  <tr>
+    <th>主观</th>
+    {% for item in s_diffview_set reversed %}
+    <td> {{ sub_dir|hash:item.sub_dir }}</td>
+    {% endfor %}
+  </tr>
+
+  <tr>
+    <th>强弱</th>
+    {% for item in s_diffview_set reversed %}
+    <td> {{ item.strength }}</td>
+    {% endfor %}
+  </tr>
+
+  <tr>
+    <th>规范</th>
+    {% for item in s_diffview_set reversed %}
+    <td> {{ item.normative }}</td>
+    {% endfor %}
+  </tr>
+
+  <tr>
+    <th>結論</th>
+    <td colspan=6>
+      {{ mov_s_res }}
+    </td>
+
+  </tr>
+</div>
+</div>
+</table>
+
+
 
 <form action="" method="POST" class="FirstSelectView">
     {% csrf_token %}
