--- a/forexsys/templates/tradesys/MarketDiffView.html
+++ b/forexsys/templates/tradesys/MarketDiffView.html
@@ -114,4 +114,9 @@
     <button id="save_and_next" type="submit">下一步(货币初选)</button>
 </form>
 
+<!-- 弹出菜单部分  -->
+<!-- TODO: 用 MODEL 数据替换写死的上下横 -->
+{% for form in b_diffview  %}
+{% endfor %}
+
 {% endblock %}
