--- a/forexsys/templates/tradesys/MarketOverView.html
+++ b/forexsys/templates/tradesys/MarketOverView.html
@@ -3,9 +3,17 @@
 {% block tradesys_head %}
 <script type="text/javascript">
 var step = 1;
-
+var auto_scroll = 0;
 function start() {
     step = 1;
+    auto_scroll = 1;
+    for (var s = 1; s < 5; s++)  {
+	$('#id_marketdetailinfo_set-' + s + '-obj_dir').val('N');
+        $('#id_marketdetailinfo_set-' + s + '-sub_dir').val('N');
+	$("#obj-selector-" + s + " li a").removeClass("selected");
+	$("#sub-selector-" + s + " li a").removeClass("selected");
+    }
+
     next_step();
 }
 
@@ -31,6 +39,8 @@ function abort_step() {
 function next_if_complete(s) {
     var v1 = $('#id_marketdetailinfo_set-' + s + '-obj_dir').val();
     var v2 = $('#id_marketdetailinfo_set-' + s + '-sub_dir').val();
+
+    if (auto_scroll == 0) return;
 
     if (v1 != 'N' && v2 != 'N') {
 	next_step();
@@ -62,6 +72,7 @@ $(function() {
 	var arg = $(this).attr('id').split('-');
 	var id = arg[3];
 	step = id;
+	auto_scroll = 0;
 	next_step();
     });
 });
@@ -139,27 +150,28 @@ $(function() {
     <div>
 	    <img src="{{ image_base_url}}/full/USDX_{{form.timeframe.value}}.gif" />
     </div>
-<div class="selector">
-    <h3>客观</h3>
-    <ul id="obj-selector-{{ forloop.counter }}" class="obj-selector">
-        <li><a href="#" id="obj-selector-{{ forloop.counter }}-U">上</a></li>
-        <li><a href="#" id="obj-selector-{{ forloop.counter }}-D">下</a></li>
-        <li><a href="#" id="obj-selector-{{ forloop.counter }}-Z">转</a></li>
-        <li><a href="#" id="obj-selector-{{ forloop.counter }}-H">横</a></li>
-    </ul>
-    <h3>主观</h3>
-    <ul id="sub-selector-{{ forloop.counter }}" class="sub-selector">
-        <li><a href="#" id="sub-selector-{{ forloop.counter }}-U">上</a></li>
-        <li><a href="#" id="sub-selector-{{ forloop.counter }}-D">下</a></li>
-        <li><a href="#" id="sub-selector-{{ forloop.counter }}-*">*</a></li>
-    </ul>
-    <div class="right">
-    <a href="javascript:next_step();" class="next_step">下一步</a>
-    <a href="javascript:abort_step();" class="abort_step">离开</a>
+    <div class="selector">
+        <h3>客观</h3>
+        <ul id="obj-selector-{{ forloop.counter }}" class="obj-selector">
+            <li><a href="#" id="obj-selector-{{ forloop.counter }}-U">上</a></li>
+            <li><a href="#" id="obj-selector-{{ forloop.counter }}-D">下</a></li>
+            <li><a href="#" id="obj-selector-{{ forloop.counter }}-Z">转</a></li>
+            <li><a href="#" id="obj-selector-{{ forloop.counter }}-H">横</a></li>
+        </ul>
+        <h3>主观</h3>
+        <ul id="sub-selector-{{ forloop.counter }}" class="sub-selector">
+            <li><a href="#" id="sub-selector-{{ forloop.counter }}-U">上</a></li>
+            <li><a href="#" id="sub-selector-{{ forloop.counter }}-D">下</a></li>
+            <li><a href="#" id="sub-selector-{{ forloop.counter }}-*">×</a></li>
+        </ul>
+        <div class="right">
+            <a href="javascript:next_step();" class="next_step">下一步</a>
+            <a href="javascript:abort_step();" class="abort_step">离开</a>
+        </div>
+        <div class="clear"></div>
+
     </div>
-    <div class="clear"></div>
 </div>
-</td>
 {% endfor %}
 
 {% endblock %}
