--- a/forexsys/templates/tradesys/FirstSelectView.html
+++ b/forexsys/templates/tradesys/FirstSelectView.html
@@ -11,14 +11,14 @@
 <form action="" method="POST" class="FirstSelectView">
     {% csrf_token %}
 
-<table class="diffview">
+<table class="graph diffview">
   <tr><td colspan=7><h2>長期</h2></td></tr>
   <tr>
     <th>图表 </th>
     {% for item in b_diffview_set reversed %}
     <td class="thumb">
-      <a href="{{image_base_url}}full/{{item.symbol_name}}_{{item.timeframe}}.gif" alt="diff_view">
-	<img src="{{image_base_url}}thumb/{{item.symbol_name}}_{{item.timeframe}}.gif" alt = "diff_view"/>
+      <a href="{{image_base_url}}full/{{item.symbol_name}}_{{timeframe_dict|hash:item.timeframe}}.gif" alt="diff_view">
+	<img src="{{image_base_url}}thumb/{{item.symbol_name}}_{{timeframe_dict|hash:item.timeframe}}.gif" alt = "diff_view"/>
       </a>
     </td>
     {% endfor %}
@@ -46,8 +46,8 @@
     <th>圖表</th>
     {% for item in s_diffview_set reversed %}
     <td class="thumb">
-      <a href="{{image_base_url}}full/{{item.symbol_name}}_{{item.timeframe}}.gif" alt="diff_view">
-        <img src="{{image_base_url}}thumb/{{item.symbol_name}}_{{item.timeframe}}.gif" alt = "diff_view"/>
+      <a href="{{image_base_url}}full/{{item.symbol_name}}_{{timeframe_dict|hash:item.timeframe}}.gif" alt="diff_view">
+        <img src="{{image_base_url}}thumb/{{item.symbol_name}}_{{timeframe_dict|hash:item.timeframe}}.gif" alt = "diff_view"/>
       </a>
     </td>
     {% endfor %}
