--- a/forexsys/templates/tradesys/MarketOverView.html
+++ b/forexsys/templates/tradesys/MarketOverView.html
@@ -1,5 +1,5 @@
 {% extends "tradesys/base.html" %}
-
+{% load tradesys_extras %}
 {% block tradesys_head %}
 <script type="text/javascript">
 var step = 1;
@@ -95,7 +95,7 @@ $(function() {
 	        {% for form in movd_formset reversed %}
             <td class="thumb">
 	            <a href="#" id="start-at-step-{{ forloop.counter }}" class="start-at-step">
-	                <img id="img-{{ forloop.counter }}" src="{{ image_base_url}}/thumb/USDX_{{form.timeframe.value}}.gif" alt = "usdx"/>
+	                <img id="img-{{ forloop.counter }}" src="{{ image_base_url}}/thumb/USDX_{{timeframe_dict|hash:form.timeframe.value}}.gif" alt = "usdx"/>
                 </a>
 	        </td>
 	        {% endfor %}
@@ -104,7 +104,7 @@ $(function() {
         <tr>
 	        <th>级别</th>
 	        {% for form in movd_formset reversed %}
-	        <td>{{form.id}} {{form.timeframe.as_hidden}} {{ form.timeframe.value }}</td>
+	        <td>{{form.id}} {{form.timeframe.as_hidden}} {{ timeframe_dict|hash:form.timeframe.value }}</td>
 	        {% endfor %}
         </tr>
 
@@ -148,7 +148,7 @@ $(function() {
 {% for form in movd_formset reversed %}
 <div id="step-{{ forloop.counter }}" class="stepview popup hidden">
     <div>
-	    <img src="{{ image_base_url}}/full/USDX_{{form.timeframe.value}}.gif" />
+	    <img src="{{ image_base_url}}/full/USDX_{{timeframe_dict|hash:form.timeframe.value}}.gif" />
     </div>
     <div class="selector">
         <h3>客观</h3>
