--- a/forexsys/templates/tradesys/AnalysisSelectedView.html
+++ b/forexsys/templates/tradesys/AnalysisSelectedView.html
@@ -1,20 +1,34 @@
 {% extends "base.html" %}
+{% load tradesys_extras %}
 {% block content %}
-<li>{{ tradeframe }} </li>
+
+
 <li>{{ tradetype }} </li>
+<label>选定币种币分析:</label><b></b>
+
 
 <form action="" method="POST" class="AnalysisSelectedView">
     {% csrf_token %}
-    <label>交易类型:</label><b></b>
-    {{ tradetype }}
-    <label>重点货币分析:</label><b></b>
     
-    {{ selected_view }}
-
-    
-
-    
-
-        <button id="selected" type="submit">选定币种趋势分析</button>
+    <table class="graph diffview">
+      <tr>
+      {% for item in selected_view %}
+      {% if forloop.counter0|divisibleby:5 %}
+	{% if forloop.counter0 != 0 %} <tr> {% endif %}	</tr><tr>
+      {% endif %}
+      {% if forloop.counter0|divisibleby:5 %}<th>{{ item.symbol_name.value }} 图表 </th>{% endif %}
+      <td class="thumb">
+	<a href="{{image_base_url}}full/{{item.symbol_name.value}}_{{timeframe_dict|hash:item.timeframe.value}}.gif" alt="diff_view">
+	  <img src="{{image_base_url}}thumb/{{item.symbol_name.value}}_{{timeframe_dict|hash:item.timeframe.value}}.gif" alt = "diff_view"/>
+	</a>
+	{{ item.id}}
+	{{ item.obj_dir }}<br>{{ item.sub_dir }}
+      </td>
+      {% endfor %}
+      </tr>
+    </table>
+      {{ selected_view.management_form }}
+      <button id="selected" type="submit"> 交易计划制定 </button>
 </form>
+
 {% endblock %}
