--- a/forexsys/templates/tradesys/FirstSelectView.html
+++ b/forexsys/templates/tradesys/FirstSelectView.html
@@ -4,10 +4,6 @@
 <li>{{ tradeframe }} </li>
 <li>{{ tradetype }} </li>
 
-
-
-
-
 <form action="" method="POST" class="FirstSelectView">
     {% csrf_token %}
 
@@ -89,7 +85,7 @@
   </tr>
   <tr>
     <th>过滤</th>
-    {% for form in first_select_view %}
+    {% for form in first_select_view reversed %}
     <td>{{form.id}} {{ form.exclude_reason }}</td>
     {% endfor %}
   </tr>
