--- a/forexsys/templates/tradesys/FirstSelectView.html
+++ b/forexsys/templates/tradesys/FirstSelectView.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 {% load tradesys_extras %}
+
+{% block menu %}
+    <a href="/tradesys/MyTradePlan">我的计划</a> &rarr;
+    <a href="/tradesys/MyTradePlan/market_over_view/">市场整体分析</a> &rarr;
+    <a href="/tradesys/MyTradePlan/market_diff_view/">各货币分化分析</a> &rarr;
+    <b>货币初选</b>
+{% endblock %}
+
+
 {% block content %}
-<li>{{ tradeframe }} </li>
 <li>{{ tradetype }} </li>
 
 <form action="" method="POST" class="FirstSelectView">
