--- a/forexsys/templates/tradesys/TradePlanActionView.html
+++ b/forexsys/templates/tradesys/TradePlanActionView.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
+
+{% block menu %}
+    <a href="/tradesys/MyTradePlan">我的计划</a> &rarr;
+    <a href="/tradesys/MyTradePlan/market_over_view/">市场整体分析</a> &rarr;
+    <a href="/tradesys/MyTradePlan/market_diff_view/">各货币分化分析</a> &rarr;
+    <a href="/tradesys/MyTradePlan/first_select_view/">货币初选</a> &rarr;
+    <a href="/tradesys/MyTradePlan/analysis_selected_view/">入选币种分析</a> &rarr;
+    <b>制定交易计划</b>
+{% endblock %}
+
 {% block content %}
 <li>{{ tradeframe }} </li>
 <li>{{ tradetype }} </li>
