--- a/forexsys/templates/tradesys/AnalysisSelectedView.html
+++ b/forexsys/templates/tradesys/AnalysisSelectedView.html
@@ -1,8 +1,16 @@
 {% extends "base.html" %}
 {% load tradesys_extras %}
+
+{% block menu %}
+    <a href="/tradesys/MyTradePlan">我的计划</a> &rarr;
+    <a href="/tradesys/MyTradePlan/market_over_view/">市场整体分析</a> &rarr;
+    <a href="/tradesys/MyTradePlan/market_diff_view/">各货币分化分析</a> &rarr;
+    <a href="/tradesys/MyTradePlan/first_select_view/">货币初选</a> &rarr;
+    <b>入选币种分析</b>
+{% endblock %}
+
+
 {% block content %}
-
-
 <li>{{ tradetype }} </li>
 <label>选定币种币分析:</label><b></b>
 
@@ -22,6 +30,8 @@
 	  <img src="{{image_base_url}}thumb/{{item.symbol_name.value}}_{{timeframe_dict|hash:item.timeframe.value}}.gif" alt = "diff_view"/>
 	</a>
 	{{ item.id}}
+	{{ item.symbol_name.as_hidden}}
+	{{ item.timeframe.as_hidden }}
 	{{ item.obj_dir }}<br>{{ item.sub_dir }}
       </td>
       {% endfor %}
