--- a/forexsys/templates/tradesys/TradePlanActionView.html
+++ b/forexsys/templates/tradesys/TradePlanActionView.html
@@ -20,6 +20,6 @@
     <label>对选中的交易货币做计划:</label><b></b>
     {{ tradeplan_action_view }}
 
-        <button id="selected" type="submit">选定币种趋势分析</button>
+        <button id="selected" type="submit">提交计划</button>
 </form>
 {% endblock %}
