--- a/forexsys/templates/tradesys/AnalysisSelectedView.html
+++ b/forexsys/templates/tradesys/AnalysisSelectedView.html
@@ -39,6 +39,7 @@
     </table>
       {{ selected_view.management_form }}
       <button id="selected" type="submit"> 交易计划制定 </button>
+      <input type="checkbox" name="planresult" value="N" /> 不做交易
 </form>
 
 {% endblock %}
