--- a/forexsys/templates/tradesys/TradePlanActionView.html
+++ b/forexsys/templates/tradesys/TradePlanActionView.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load tradesys_extras %}
 
 {% block menu %}
     <a href="/tradesys/MyTradePlan">我的计划</a> &rarr;
@@ -11,7 +12,23 @@
 
 {% block content %}
 <li>{{ tradeframe }} </li>
-<li>{{ tradetype }} </li>
+
+<table class="graph diffview">
+  <tr>
+    {% for item in selected_view %}
+    {% if forloop.counter0|divisibleby:5 %}
+    {% if forloop.counter0 != 0 %} <tr> {% endif %}	</tr><tr>
+    {% endif %}
+    {% if forloop.counter0|divisibleby:5 %}<th>{{ item.symbol_name.value }} 图表 </th>{% endif %}
+    <td class="thumb">
+      <a href="{{image_base_url}}full/{{item.symbol_name.value}}_{{timeframe_dict|hash:item.timeframe.value}}.gif" alt="diff_view">
+	<img src="{{image_base_url}}thumb/{{item.symbol_name.value}}_{{timeframe_dict|hash:item.timeframe.value}}.gif" alt = "diff_view"/>
+      </a>
+      {{ item.obj_dir }}<br>{{ item.sub_dir }}
+    </td>
+    {% endfor %}
+  </tr>
+</table>
 
 <form action="" method="POST" class="TradePlanActionView">
     {% csrf_token %}
