--- a/forexsys/templates/tradesys/MyTradePlanView.html
+++ b/forexsys/templates/tradesys/MyTradePlanView.html
@@ -4,6 +4,15 @@
 {% endblock %}
 {% block content %}
 
+
+<h1>新建交易計劃</h1>
+<form action="" method="POST" class="MyTradePlan">
+    {% csrf_token %}
+    {{ tradeinfo }}
+    <button id="create_plan" type="submit">创建/修改最新交易计划</button>
+</form>
+
+
 <h1>目前已有的交易</h1>
 <ol>
     {% for tp in oldplans %}
@@ -12,13 +21,15 @@
          | <a href="/tradesys/MyTradePlan/report_view/{{ tp.id }}/">Report</a>
     </li>
     {% endfor %}
+
+    {% if oldplans.has_previous %}
+    <a href="?page={{ oldplans.previous_page_number }}">上一页</a>
+    {% endif %}
+|
+    {% if oldplans.has_next %}
+    <a href="?page={{ oldplans.next_page_number }}">下一页</a>
+    {% endif %}
 </ol>
 
-<h1>新建交易計劃</h1>
-<form action="" method="POST" class="MyTradePlan">
-    {% csrf_token %}
-    {{ tradeinfo }}
-    <button id="create_plan" type="submit">创建交易计划</button>
-</form>
 
 {% endblock %}
